<resources>
    <string name="app_name">Test1</string>
    <string name="splashScreen">SplashScreen</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="create_account">Create an account</string>
    <string name="error_email">Email is wrong or doesn\'t exist!</string>
    <string name="error_password">Wrong password!</string>
    <string name="sign_in_success">Welcome!</string>
    <string name="name">Name</string>
    <string name="sign_up_error">The account already exists!</string>
    <string name="account_created">Your account was created!</string>
    <string name="error_name">Name can\'t be empty</string>
</resources>